# versioneer

./: CLAUDE.md  Cargo.toml  LICENSE  LINTING.md  README.md  deny.toml  hooks.toml  install.sh  justfile  rustfmt.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deps.yml  release.yml
scripts/: release.sh
src/: completions.rs  doctor.rs  lib.rs  main.rs  output.rs  update.rs
tests/: cli_integration_test.rs  reset_integration_test.rs
