[package]
name = "versioneer"
version = "1.5.6"
edition = "2024"
rust-version = "1.85.0"
authors = ["Versioneer Contributors"]
description = "A tool to synchronize VERSION files with build system version declarations"
license = "MIT"
repository = "https://github.com/example/versioneer"
keywords = ["version", "semver", "build", "sync", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
regex = "1.0"
semver = "1.0"
git2 = { version = "0.20", default-features = false }
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
workhelix-cli-common = "0.1.3"

[dev-dependencies]
tempfile = "3.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
